--- a/.github/workflows/spinnaker-ci.yml
+++ b/.github/workflows/spinnaker-ci.yml
@@ -2,7 +2,7 @@
 
 name: Spinnaker Pre Install
 env:
-  SPINNAKER_VERSION: 1.26.2
+  SPINNAKER_VERSION: 1.26.6
   #REGISTRY_URL: "gcr.io/spinnaker-marketplace/"
   REGISTRY_URL: "us-docker.pkg.dev/spinnaker-community/docker/"
   NEW_REGISTRY_URL: "registry.cn-shenzhen.aliyuncs.com/formovie-spinnaker/"
@@ -61,15 +61,15 @@ jobs:
            docker pull ${REGISTRY_URL}${tag}
         done
     
-    - name: 02-2-同步镜像到dockerHUB
-      run: |
-        docker login -u ${{ secrets.HUBDOCKER_USER}} -p ${{ secrets.HUBDOCKER_PASSWD}} docker.io
-        for tag in $(cat ${TAG_FILE})
-        do 
-           echo  -e "\033[32m  ---> push ---> ${NEW_REGISTRY_URL2}${tag} \033[0m"
-           docker tag ${REGISTRY_URL}${tag} ${NEW_REGISTRY_URL2}${tag}
-           docker push ${NEW_REGISTRY_URL2}${tag}
-        done
+    #- name: 02-2-同步镜像到dockerHUB
+    #  run: |
+    #    docker login -u ${{ secrets.HUBDOCKER_USER}} -p ${{ secrets.HUBDOCKER_PASSWD}} docker.io
+    #    for tag in $(cat ${TAG_FILE})
+    #    do 
+    #       echo  -e "\033[32m  ---> push ---> ${NEW_REGISTRY_URL2}${tag} \033[0m"
+    #       docker tag ${REGISTRY_URL}${tag} ${NEW_REGISTRY_URL2}${tag}
+    #       docker push ${NEW_REGISTRY_URL2}${tag}
+    #    done
            
     - name: 02-3-同步镜像到阿里云镜像仓库
       run: |
